[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/interactives/inventory/interactive-inventory.gd" type="Script" id=2]
[ext_resource path="res://assets/inventories/chest.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="InteractiveInventory" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractLabel" type="Label" parent="."]
visible = false
margin_left = -3.0
margin_top = -28.0
margin_right = 37.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 2 )
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryContainer" type="Node2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Chest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Chest_body_exited"]
